- cleaned Makefile and end.s ("the end.s episode") (LVL)
- copy paste error in linea stubs, startup.s (LVL)

10. Oct. 2001
- EmuTOS now expects a cartridge of type 3, just as the original TOS. (THO)

11. Oct. 2001
- removed the cart directory and the cartridge - no longer needed (MAD)

12. Oct. 2001
- Initialised linea from startup.s (_esc_init -> _linea_init) (MAD)
- Cleaned up conio.c
- Cleaned up output stuff in bios.c
- Put all linea stuff in bios/linea.s
- Cleaned up some minor things in bdos/proc.c
- Changed linea/graphics init in bios/startup.s
- Set up half of memory config in bios/startup.s
- pseudo reentrant bios xbios trap handler (LVL)
- Supexec() (LVL)
- bios device functions arrays (bconstat_vec, ...) (LVL)

13. Oct. 2001
- Fixed some minor errors while compilation (MAD)
- Added more system vars in tosvars.s and fixed an error (no pun_ptr) (MAD)

14. Oct. 2001
- implemented full memory configuration - much much more memory now (MAD)
- implemented cursor (not blinking - this was easy) 
- Changed version string of command.prg
- correct fnt8x8 (previous one useless) and fnt8x16 (last char offset) (LVL)
- some progress on iorec, but still not in service (LVL)

16. Oct. 2001
- Fixed some bugs in bios.c (the bconoutx functions need 2 parameters!) (THO)

19. Oct. 2001
- Cleaned up and seperated memory initialisation in memory.s
- Cleaned up command.prg (got rid of cpm code)

20. Oct. 2001
- added memmove and memset, erasing bmove, xmovs and bfill in bdos (LVL)
- midi and ikbd bios device functions; new ikbd interrupt (LVL)
- started to clean some headers (removed abbrev.h, btools.h) (LVL)
- added bconout5 (raw console) (LVL)

21. Oct. 2001
- mfp xbios functions ; mfp init rewritten using xbios funcs. (LVL)
- vbl routine: added palette handling and vblqueue. (LVL)
- misc. xbios routines (vsync, random, ...) (LVL)
- warning free, automatic built date in command.prg (LVL)
- still some headers cleaning in bios/ and include/ (LVL)